@@ -1,3 +1,8 @@
+2010-12-27 Mon  Jari Aalto  <jari.aalto@cante.net>
+
+	* epackage.el: (Spec): add 'Custom' to License. Add new field
+	'License-Text'.
+
 2010-12-25 Sat  Jari Aalto  <jari.aalto@cante.net>
 
 	* epackage.el (epackage-url-encode): New.
